Fix comment file upload button in dark mode

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -20,7 +20,7 @@
   }
 
   .base-input {
-    @apply rounded-md px-2 py-2 shadow-sm border text-gray-900 border-gray-400 outline-none focus:border-indigo-500 focus:ring-indigo-500 text-sm bg-white dark:bg-gray-700 dark:focus:bg-gray-300 dark:border-gray-600 dark:text-gray-300 dark:focus:text-gray-900;
+    @apply rounded-md px-2 py-2 shadow-sm border text-gray-900 border-gray-400 outline-none focus:border-indigo-500 focus:ring-indigo-500 text-sm bg-white dark:bg-gray-700 dark:focus:bg-gray-600 dark:border-gray-600 dark:text-gray-200 dark:placeholder-gray-400;
   }
 
   .btn-tab {
